--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,6 +4,9 @@
     <% @tasks.each do |task| %>
   <li><%= task.completed ? '✅' : '🅾️' %>
     <%= link_to task.title, task_path(task) %>
+    <%= link_to 'Delete', task_path(task), method: :delete%>
   </li>
     <% end %>
 </ul>
+
+<%= link_to 'Add a new task', new_task_path %>
